# sylvan-haskell-example

./: Makefile  README.md  stack.yaml  sylvan-CMakeLists-NEWER.txt.patch  sylvan-CMakeLists.txt.patch  sylvan-haskell-example.cabal  sylvan-haskell-example.hs  sylvan-src-sha2.c.patch
