name:                 sylvan-haskell-example
version:              0.1.0.0
synopsis:             Sylvan Haskell Example
description:          See README.md and Makefile.
author:               Malvin Gattinger
maintainer:           malvin@w4eg.de
copyright:            2024 Malvin Gattinger
category:             Data
build-type:           Simple
cabal-version:        >=1.10

executable sylvan-haskell-example
  ghc-options:        -Wall
  default-language:   Haskell2010
  main-is:            sylvan-haskell-example.hs
  build-depends:      base >= 4.7 && < 5,
                      primitive >=0.5 && <0.9,
                      sylvan-haskell
  extra-libraries:    sylvan, pthread, hwloc
  extra-lib-dirs:     /usr/local/lib/
